Made some changes on Views.

--- a/MyVehicleTrackingSystem.Wings/MyVehicleTrackingSystem.Wings/Views/Shared/_Layout.cshtml
+++ b/MyVehicleTrackingSystem.Wings/MyVehicleTrackingSystem.Wings/Views/Shared/_Layout.cshtml
@@ -61,12 +61,12 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="exampleModalLabel">Navil Enterprises Login Notification.</h4>
+                    <h4 class="modal-title" id="exampleModalLabel">MyVehicleTracking System Login Notification.</h4>
                 </div>
                 <div class="modal-body">
                     <form>
                         <div class="form-group">
-                            Hey, Since you are inactive in Navil Enterprises (PVT) Ltd site, your login session will expire in 1 minute. Then you will be redirected to the login page after the session expiration time. Please login to the site again. Thank you!
+                            Hey, Since you are inactive in MyVehicleTracking System site, your login session will expire in 1 minute. Then you will be redirected to the login page after the session expiration time. Please login to the site again. Thank you!
                         </div>
                     </form>
                 </div>
